# core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bump.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/: copilot-instructions.md
.github/workflows/: autofix.yml  release.yml
docs/: index.md  package.json  vercel.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  index.ts
docs/guide/: index.md
docs/sdk/: browser.md  go.md  node.md  python.md
docs/slides/: about-me.md  final-word.md  slides.md
docs/slides/setup/: preparser.ts
frontend/: LICENSE  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: build.mts  build.ts  publish.ts
sdk/browser/: README.md  package.json  tsconfig.json  tsdown.config.ts
sdk/go/: README.md  go.mod  lib.go
sdk/node/: README.md  package.json  tsdown.config.ts
sdk/python/: README.md  example.py  lib.py  pyproject.toml
sdk/python/unitoken/: __init__.py  client.py  openai_adapter.py
sdk/web/: package.json  tsdown.config.ts
service/: go.mod  go.sum  main.go
service/constants/: constants.go
service/discovery/: data.go  file.go  install.go  named_pipe.go  singleton.go
service/logic/: auth.go  constants.go  open.go  sudo.go  usage.go
service/server/: action.go  app.go  auth.go  gateway.go  keys.go  presets.go  providers.go  proxy.go  server.go  silicon-flow.go  store.go  usage.go
service/store/: store.go  types.go  usage.go
ui/: index.html  package.json  vite.config.ts
ui/src/: App.vue
(+220 files in other folders)
