[project]
name = "unitoken"
version = "0.0.3"
description = "UniToken Python SDK - Unified token management for AI applications"
readme = "README.md"
keywords = [
  "ai",
  "token",
  "openai",
  "api",
  "sdk",
  "unitoken"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
requires-python = ">=3.3"
dependencies = [ "requests>=2.25.0" ]

[project.license]
text = "MIT"

[[project.authors]]
name = "_Kerman"
email = "kermanx@qq.com"

[project.urls]
Homepage = "https://uni-token.app"
Documentation = "https://docs.uni-token.app/"
Repository = "https://github.com/uni-token/core"
Issues = "https://github.com/uni-token/core/issues"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "unitoken" ]

[dependency-groups]
dev = [ "openai>=1.99.3" ]
